--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Roboto, sans-serif;
-    background-color: hsl(0, 49%, 92%);
+    background-color: hsl(0, 49%, 95%);
 }
 
 /* Navigation Bar */
@@ -32,6 +32,7 @@ body {
     width: 100%;
     height: 70px;
     z-index: 1000;
+    background-color: hsl(0, 49%, 95%);
 }
 
 #logo{
@@ -48,19 +49,25 @@ body {
     font-family: Roboto, sans-serif;
     padding: 10px; 
     animation:
-} 
+}
 
 nav-links:hover{
     animation: glow 0.5s infinite alternate ease-in-out;
 }
 
 
+#brief-img{
+    width: 300px;
+    height: auto;
+    margin-top: 75px;
+}
+
 .brief-intro {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 50px;
-    background-color: hsl(0, 100%, 99%);
+    padding: 30px;
+    background-color: hsl(0, 49%, 95%);
 }
 
 .brief-text{
