Finished up all the styling for both html sites

--- a/styles.css
+++ b/styles.css
@@ -43,16 +43,29 @@ body {
 }
 
 .nav-links{
-    color: hsl(0, 100%, 99%);
+    color: hsl(20, 80%, 70%);
     text-decoration: none;
     font-size: 16px; 
     font-family: Roboto, sans-serif;
+    font-weight: bold;
     padding: 10px; 
-    animation:
 }
 
-nav-links:hover{
+.nav-links:hover{
     animation: glow 0.5s infinite alternate ease-in-out;
+} 
+
+#sent{
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    padding: 10px 10px;
+    background-color: hsl(20, 80%, 70%);
+    color: snow;
+} 
+
+#sent:hover{
+    background-color: hsl(0, 2%, 8%);
 }
 
 
@@ -67,7 +80,7 @@ nav-links:hover{
     justify-content: space-around;
     align-items: center;
     padding: 30px;
-    background-color: hsl(0, 49%, 95%);
+    background-color: hsl(0, 49%, 90%);
 }
 
 .brief-text{
@@ -75,11 +88,36 @@ nav-links:hover{
 }
 
 .brief-text h1{
-    font-size: 48px;
+    font-size: 40px;
     font-weight: 900;
     margin-bottom: 10px;
+}  
+
+
+.quote-section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    max-width: 900px;
+    padding: 20px;
+    gap: 20px; /* Space between image and text */
 }
 
+
+.section-img{
+    width: 200px;
+    height: auto;
+    margin-right: 10px;
+    animation: slideRight 1s ease-in-out  forwards;
+}
+
+.section-text {
+    max-width: 400px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: left;
+}
 
 
 main{
@@ -94,15 +132,16 @@ main{
 
 
 footer{
-    color: hsl(0, 100%, 99%);
+    color: hsl(20, 80%, 70%);
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 30px;
-    font-size: 7.5px;
+    font-size: 15px;
     text-align: center;
-    background-color: hsla(0, 0%, 0%, 0.507);
+    font-weight: bold;
+    background-color: hsla(0, 49%, 87%, 0.178);
 } 
 
 
