--- a/style2.css
+++ b/style2.css
@@ -22,7 +22,7 @@ body {
     top: 0;
     width: 100%;
     height: 60px;
-    z-index: 1000; 
+    z-index: 1000;
     animation: slideRight 1s ease-in-out forwards;
 }
 
@@ -93,11 +93,31 @@ button:hover {
     font-weight: bold;
 }
 
+/* Recipe List */
+.recipe-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.recipe-item {
+    background-color: hsl(45, 80%, 85%);
+    color: hsl(0, 2%, 20%);
+    font-weight: bold;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.recipe-item:hover {
+    background-color: hsl(45, 80%, 75%);
+}
+
 /* YouTube Results */
 #youtubeResult {
     margin-top: 20px;
     padding: 15px;
-    background-color: hsl(200, 80%, 90%);
+    background-color: hsl(50, 80%, 90%);
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     text-align: left;
@@ -113,6 +133,8 @@ button:hover {
     color: hsl(220, 80%, 60%);
     font-weight: bold;
     transition: color 0.3s ease-in-out;
+    display: inline-block;
+    padding: 5px 0;
 }
 
 #youtubeResult a:hover {
@@ -129,4 +151,4 @@ button:hover {
         transform: translateX(0);
         opacity: 1;
     }
-} 
+}
