--- a/style2.css
+++ b/style2.css
@@ -26,10 +26,25 @@ body {
     animation: slideRight 1s ease-in-out forwards;
 }
 
+
+
+/* Style for logo and title */
+.logo-container {
+    display: flex;
+    align-items: center;
+} 
+
 #logo {
     width: 50px;
     height: auto;
-}
+}  
+
+#site-title {
+    font-size: 22px;
+    font-weight: bold;
+    color: hsl(20, 80%, 70%);
+    font-family: "Roboto", sans-serif; 
+} 
 
 .nav-links {
     text-decoration: none;
